refactor(build): Remove UA_ENABLE_PUBSUB_ETH_UADP option - now part of the EventLoop

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -224,7 +224,7 @@ if(UA_ENABLE_PUBSUB)
     add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
     add_example(server_pubsub_rt_information_model pubsub/server_pubsub_rt_field_information_model.c)
     if(CMAKE_SYSTEM MATCHES "Linux")
-        if(UA_ENABLE_PUBSUB_ETH_UADP AND UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_IMMUTABLE_NODES)
+        if(UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_IMMUTABLE_NODES)
             add_example(rt_publisher pubsub_realtime/pubsub_interrupt_publish.c)
             target_link_libraries(rt_publisher rt)
         endif()
@@ -242,13 +242,11 @@ if(UA_ENABLE_PUBSUB)
         #     add_example(pubsub_TSN_loopback_single_thread pubsub_realtime/pubsub_TSN_loopback_single_thread.c)
         #     target_link_libraries(pubsub_TSN_publisher_multiple_thread rt pthread)
         #     target_link_libraries(pubsub_TSN_loopback_single_thread rt pthread)
-        #     if(UA_ENABLE_PUBSUB_ETH_UADP)
-        #         add_subdirectory(pubsub_realtime/nodeset)
-        #         add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
-        #         add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
-        #         target_link_libraries(pubsub_TSN_publisher rt pthread)
-        #         target_link_libraries(pubsub_TSN_loopback rt pthread)
-        #     endif()
+        #     add_subdirectory(pubsub_realtime/nodeset)
+        #     add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
+        #     add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
+        #     target_link_libraries(pubsub_TSN_publisher rt pthread)
+        #     target_link_libraries(pubsub_TSN_loopback rt pthread)
         # endif()
     endif()
     if(UA_ENABLE_PUBSUB_ENCRYPTION)
