Add sample application for role based access control  - Addressed following comments from Julius:    1. Trailing "s" missing for RolePermissions    2. Include all well known roles    3. Use prefered naming scheme    4. Rename AccessControlGroup
Signed-off-by: Asish Ganesh <asish@eclatron.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -201,6 +201,12 @@ if(UA_ENABLE_DISCOVERY_MULTICAST)
     add_example(discovery_server_multicast discovery/server_multicast.c)
 endif()
 
+# Enable the tutorial_server_roles_and_permissions example while the 
+# UA_ENABLE_ROLE_PERMISSIONS flag is enabled
+if(UA_ENABLE_ROLE_PERMISSIONS)
+    add_example(tutorial_server_roles_and_permissions tutorial_server_roles_and_permissions.c)
+endif()
+
 add_subdirectory(nodeset)
 ####################
 #  Example PubSub  #
