build(pkgconfig): export amalgamation flag
While a UA_ENABLE_AMALGAMATION macro is defined in the amalgamated
open62541.h file and undefined in the non-amalgamated open62541/config.h
file, it is not usable in downstream projects as they would need a
priori knowledge which of the header files to include.
They may try a test compilation in their build system's configure phase
with one of the headers and set UA_ENABLE_AMALGAMATION if amalgamation
is detected. However, this causes some code duplication in each
downstream project.

Exporting the flag in the pkg-config file enables downstream projects to
check for the open62541 dependency as usual and automatically get the
necessary flag.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -732,6 +732,9 @@ file(MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/src_generated")
 configure_file(include/open62541/config.h.in ${PROJECT_BINARY_DIR}/src_generated/open62541/config.h)
 
 # Generate a .pc file for pkg-config
+if(UA_ENABLE_AMALGAMATION)
+    set(PC_EXTRA_CFLAGS "-DUA_ENABLE_AMALGAMATION")
+endif()
 configure_file(tools/open62541.pc.in ${PROJECT_BINARY_DIR}/src_generated/open62541.pc @ONLY)
 
 if(UA_ENABLE_DISCOVERY_MULTICAST)
