--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -37,7 +37,9 @@
  * ---------------
  * Changing the feature options has no effect on a pre-compiled library. */
 
+#ifndef UA_LOGLEVEL
 #define UA_LOGLEVEL ${UA_LOGLEVEL}
+#endif
 #ifndef UA_ENABLE_AMALGAMATION
 #cmakedefine UA_ENABLE_AMALGAMATION
 #endif
